--- a/style.css
+++ b/style.css
@@ -472,10 +472,26 @@ a {
 }
 
 .post-content {
-    min-height: 60em;
+    min-height: 40em;
     margin-top: 10em
 }
 .post-content-title{
 
     text-align: center;
+}
+
+.post-content-aut{
+     text-align: center;
+     padding: 0em;
+     margin: 0em;
+  /*  // height: 1em;*/
+}
+.post-content-artricle{
+    line-height: 0.5em;
+/* min-height: 60em;
+ text-align: justify ;
+*/
+}
+h5{
+    line-height: 1.5em;
 }
