--- a/style.css
+++ b/style.css
@@ -9,6 +9,15 @@ Text Domain: nzcn
 
 
 */
+a {
+    color: #ff4e53
+}
+a:hover{
+    color:#fff;
+    text-decoration: none;
+    background:#ff4e53;
+    border-radius: 2px;
+}
 
 .container-fluid {
     padding: 0 5%;
@@ -151,7 +160,8 @@ nav {
     color: #fff;
     z-index: 999;
     -webkit-border-radius: 2px;
-    border-radius: 2px
+    border-radius: 2px;
+    text-transform:uppercase
 }
 
 .news-caption {
@@ -175,6 +185,16 @@ nav {
 
 .news-caption h1 {
     font-size: 1.2rem
+}
+
+.news-caption h1 a {
+    color:#fff;
+}
+
+.news-caption h1 a:hover {
+    color:#fff;
+    text-decoration: none;
+    background: transparent;
 }
 
 @media (max-width:1366px) {
@@ -309,15 +329,17 @@ nav {
 }
 
 .widget-menu li a {
-    color: #ff4e53!important;
+    color: #ff4e53;
     border-left: solid 2px #ff4e53;
     padding-left: 5px
 }
 
 .widget-menu li a:hover {
-    color: #333!important;
+    color: #333;
     border-left: solid 2px #333
 }
+
+
 
 .title-2 {
     margin-bottom: 2rem;
@@ -379,9 +401,14 @@ nav {
     padding-left: 0
 }
 
-.news-widget li h4 {
+.news-widget li h4 a{
     color: #444;
     font-size: 1.4rem
+}
+
+.news-widget li h4 a:hover{
+    color: #FF9296;
+    background: transparent;
 }
 
 .news-widget li p {
@@ -393,8 +420,12 @@ nav {
     border-bottom: dotted 1px #333
 }
 
-a {
-    color: #ff4e53
+
+.article-img{
+    width: 100%;
+    height: 0;
+    padding-bottom: 60%;
+    overflow: hidden
 }
 
 .article-1 li {
@@ -411,10 +442,19 @@ a {
 .article-1 h4 {
     margin-top: 5px
 }
+.article-1 h4 a{
+    color:#333
+}
+.article-1 h4 a:hover{
+    color:#ff4e53;
+    text-decoration: none;
+    background: transparent;
+}
 
 .article-1 .article-img {
     width: 22%;
     display: inline-block;
+    padding-bottom: 18%;
     margin-right: 1.2rem;
     vertical-align: top
 }
@@ -443,6 +483,16 @@ a {
 
 .article-2 .article-content h4 {
     padding-top: 10px
+}
+
+.article-2 .article-content h4 a{
+    color:#333
+}
+
+.article-2 .article-content h4 a:hover{
+    color:#ff4e53;
+    text-decoration: none;
+    background: transparent;
 }
 
 .article-2 .article-content {
