--- a/style.css
+++ b/style.css
@@ -12,12 +12,14 @@ Text Domain: nzcn
 a {
     color: #ff4e53
 }
+
 a:hover{
     color:#fff;
     text-decoration: none;
     background:#ff4e53;
     border-radius: 2px;
 }
+
 
 .container-fluid {
     padding: 0 5%;
@@ -329,14 +331,15 @@ nav {
 }
 
 .widget-menu li a {
-    color: #ff4e53;
+    color: #ff4e53 !important;
     border-left: solid 2px #ff4e53;
     padding-left: 5px
 }
 
 .widget-menu li a:hover {
-    color: #333;
-    border-left: solid 2px #333
+    color: #333 !important;
+    border-left: solid 2px #333;
+    background:transparent
 }
 
 
