multi-lingual support

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: Nebulahub ltd
 Author URI: http://nebulahub.com
 Description: ...
 Version: 1.0
-Text Domain: nzcn
+Text Domain: nzcn-theme
 
 
 */
