--- a/style.css
+++ b/style.css
@@ -446,7 +446,7 @@ nav {
     width: 100%;
     height: 0;
     padding-bottom: 60%;
-    overflow: hidden
+    overflow: hidden;
 }
 
 .article-1 li {
@@ -477,6 +477,7 @@ nav {
     display: inline-block;
     padding-bottom: 18%;
     margin-right: 1.2rem;
+    
     vertical-align: top
 }
 
