--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ nav {
     font-size:0.9rem
 }
 
+.navbar-light .navbar-toggler{
+    z-index:9999
+}
+
 .topbar {
     background: #ff4e53;
     color: #fff;
@@ -364,7 +368,7 @@ nav {
 
 .title-2 {
     margin-bottom: 2rem;
-    font-size: 1.8rem
+    font-size: 1.4rem
 }
 
 .title-2 span {
@@ -373,6 +377,10 @@ nav {
     color: #fff;
     -webkit-border-radius: 3px;
     border-radius: 3px
+}
+
+.article-2 .title-3{
+    font-size:0.8rem
 }
 
 .title-3 {
@@ -441,12 +449,16 @@ nav {
     border-bottom: dotted 1px #333
 }
 
+.section{
+    margin-bottom:30px
+}
 
 .article-img{
     width: 100%;
     height: 0;
     padding-bottom: 60%;
     overflow: hidden;
+    vertical-align: top;
 }
 
 .article-1 li {
@@ -461,7 +473,8 @@ nav {
 }
 
 .article-1 h4 {
-    margin-top: 5px
+    margin-top: 5px;
+    font-size:1.2rem
 }
 .article-1 h4 a{
     color:#333
@@ -475,15 +488,13 @@ nav {
 .article-1 .article-img {
     width: 22%;
     display: inline-block;
-    padding-bottom: 18%;
+    padding-bottom: 16%;
     margin-right: 1.2rem;
-    
-    vertical-align: top
 }
 
 .article-1 .article-content {
     display: inline-block;
-    width: 74%
+    width: 73%
 }
 
 .article-meta {
@@ -493,12 +504,16 @@ nav {
     color:#ff4e53
 }
 
+.article-meta a:hover{
+    color:#333;
+    text-decoration: none
+}
+
 .article-2 li {
-    margin-top: 10px;
-    padding-bottom: 5px;
-    display: inline-block;
-    width: 49%;
-    padding-right: 2%
+    float:left;
+    width: 48%;
+    margin-right:1%;
+    margin-bottom:30px
 }
 
 .article-2 {
@@ -527,7 +542,11 @@ nav {
     border-radius: 0 0 10px 10px
 }
 
-@media (max-width:900px) {
+.article-2 .short-description{
+    padding-top:10px
+}
+
+@media screen and (max-width:900px) {
     .article-2 li {
         width: 100%
     }
@@ -541,10 +560,11 @@ nav {
     }
 }
 
-@media (max-width:768px) {
+@media screen and (max-width: 768px) {
     .article-1 .article-img {
         width: 100%;
-        display: block
+        padding-bottom:60%;
+        display: block;
     }
     .article-1 .article-content {
         display: block;
