--- a/style.css
+++ b/style.css
@@ -578,6 +578,7 @@ nav {
     text-align: center;
     top: 8em;
     position: fixed;
+    display: none;
     z-index: 9999
 }
 
@@ -614,5 +615,12 @@ nav {
 .post-content-artricle p{
 
  line-height: 1.5em;
+}
+
+
+@media screen and (min-width: 768px) {
+.post-social{
+    display: block;
+}
 }
 
