--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ nav {
 
 .big-news li {
     float: left;
-    width: 24%;
+    width: 48%;
     margin-right: 10px;
     margin-bottom: 10px
 }
@@ -163,10 +163,50 @@ nav {
     margin-right: 10px
 }
 
+.carousel{
+    margin-bottom:20px
+}
+
+.carousel-caption{
+    left:0;
+    right:0;
+    text-align:left;
+    color: #ff4e53;
+    background: rgba(0, 0, 0, .5);
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, .9)), to(transparent));
+    background: -webkit-linear-gradient(bottom, rgba(0, 0, 0, .9), transparent);
+    background: linear-gradient(to top, rgba(0, 0, 0, .9), transparent);
+    padding: 1rem 1rem 0 1rem;
+    bottom:0;
+    width:100%
+}
+
+.carousel-caption a{
+    color:#fff
+}
+
+.carousel-caption a:hover{
+    color:#ff4e53
+}
+
+.carousel-img{
+    width:100%;
+    height:0;
+    padding-bottom:55%;
+    overflow: hidden;
+}
+
+.carousel img{
+    width:100%;
+    height:auto;
+}
+
+
+
 .news-img {
     width: 100%;
     height: 0;
-    padding-bottom: 60%;
+    padding-bottom: 55%;
     overflow: hidden
 }
 
@@ -201,7 +241,8 @@ nav {
 }
 
 .news-caption p {
-    color: #ff4e53
+    color: #ff4e53;
+    margin-bottom:5px
 }
 
 .first-news .news-caption h1 {
@@ -209,7 +250,7 @@ nav {
 }
 
 .news-caption h1 {
-    font-size: 1.2rem
+    font-size: 1rem
 }
 
 .news-caption h1 a {
@@ -236,7 +277,7 @@ nav {
     }
     .big-news li {
         float: left;
-        width: 24%;
+        width: 48%;
         margin-right: 5px;
         margin-bottom: 5px
     }
@@ -262,7 +303,7 @@ nav {
         font-size: .7rem
     }
     .big-news li {
-        width: 24%;
+        width: 48%;
         margin-right: 5px;
         margin-bottom: 5px
     }
@@ -303,7 +344,7 @@ nav {
         top: 1rem;
         right: 1rem
     }
-    .first-news .news-caption h1 {
+    .carousel-caption h3 {
         font-size: 1.3rem
     }
     .news-caption h1 {
@@ -458,7 +499,7 @@ nav {
 .article-img{
     width: 100%;
     height: 0;
-    padding-bottom: 60%;
+    padding-bottom: 55%;
     overflow: hidden;
     vertical-align: top;
 }
@@ -565,7 +606,7 @@ nav {
 @media screen and (max-width: 768px) {
     .article-1 .article-img {
         width: 100%;
-        padding-bottom:60%;
+        padding-bottom:55%;
         display: block;
     }
     .article-1 .article-content {
