--- a/style.css
+++ b/style.css
@@ -834,6 +834,14 @@ width:45%;
 
     display: block;
 }
+
+
+.meta-content:hover{
+
+   background:#2f3038;
+   color: white;
+}
+
 .meta-wrapper {
     text-align: center;
     width: 100%;
