--- a/style.css
+++ b/style.css
@@ -838,8 +838,8 @@ width:45%;
 
 .meta-content:hover{
 
-   background:#2f3038;
-   color: white;
+   /*background:#2f3038;*/
+  /* color: white;*/
 }
 
 .meta-wrapper {
@@ -864,11 +864,11 @@ width:45%;
   width: 0; 
   height: 0; 
   border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent; 
-  
+  border-bottom: 10px solid transparent;  
   border-right:10px solid; 
   position: absolute;
   left: -10px;
   top:28px;
+/*  z-index: 1020;*/
 
 }
