--- a/style.css
+++ b/style.css
@@ -838,8 +838,8 @@ width:45%;
 
 .meta-content:hover{
 
-   /*background:#2f3038;*/
-  /* color: white;*/
+   background:#2f3038;
+   color: white;
 }
 
 .meta-wrapper {
